actually properly fixed issue with spacing to the right of the hero image on large screens (and dead space to the right in general; edited readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,10 +40,6 @@ h6 {
     text-align: center;
 }
 
-a {
-    text-decoration: none;
-}
-
 div div h3 {
     padding-bottom: 50px;
 }
@@ -105,10 +101,10 @@ footer {
 /* Hero Image */
 
 .hero-image {
-    height: 101vh;
+    height: 108vh;
     width: 100%;
     background: url('../images/armings_heroes.png') center no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
 }
 
